# pyo3-bug

./: Cargo.toml  README.md
src/: lib.rs
